# svg-academic

./: LICENSE  README.md  __init__.py  alldemo.py  config.py  demo.py  managers.py  managers_old.py  plotter.py  pyproject.toml  setup.cfg  templates.py  utils.py
