[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/394481125/svg-academic  # 替换为实际仓库地址
project_urls =
  Bug Tracker = https://github.com/394481125/svg-academic/issues

[options]
packages = find:
package_dir =
  = .
include_package_data = True
install_requires =
  matplotlib>=3.5.0
  numpy>=1.21.0
  pandas>=1.3.0
  seaborn>=0.11.0

[options.package_data]
* = *.md  # 包含所有Markdown文件（如README）
svg_academic = *.py  # 确保所有Python文件被打包

[options.extras_require]
dev =
  pytest>=7.0.0
  black>=22.0.0
  flake8>=4.0.0
